# ROBO

./: .gitignore  .gitmodules  LICENSE  README.md  setup.sh
Assignment_2/: README.md  setup.sh
Assignment_2/devel/: .catkin
Assignment_2/src/assignment_2/: CMakeLists.txt  line_following.cpp  main.cpp  package.xml
Assignment_2/src/assignment_2/stdr_files/stdr_launchers/launch/: linefollowing_C.launch  linefollowing_V.launch  linefollowing_W.launch
Assignment_2/src/assignment_2/stdr_files/stdr_resources/maps/: c.yaml  w.yaml
Assignment_2/src/assignment_2/stdr_files/stdr_resources/resources/robots/: robot.xml  robot.yaml
Assignment_3_and_4/: README.md
Assignment_3_and_4/devel/: .catkin  _setup_util.py
Assignment_3_and_4/gzweb/.hg/: branch  dirstate
Assignment_3_and_4/src/: cat.rviz
Assignment_3_and_4/src/cat_behaviour/: CMakeLists.txt  package.xml
Assignment_3_and_4/src/cat_control/: CMakeLists.txt  package.xml
Assignment_3_and_4/src/cat_description/: CMakeLists.txt  package.xml
Assignment_3_and_4/src/cat_gazebo/: CMakeLists.txt
Assignment_3_and_4/src/cat_training/: CMakeLists.txt  package.xml
Assignment_3_and_4/src/mouse_control/: CMakeLists.txt  package.xml
Assignment_3_and_4/src/mouse_description/: CMakeLists.txt  package.xml
Assignment_3_and_4/src/mouse_description/urdf/: mouse.gazebo  mouse.xacro
assignment_2/: CMakeLists.txt
assignment_2/lib/: line_following.h
assignment_2/src/: line_following.cpp  main.cpp
assignment_2/stdr/: ass2_launch
devel/include/stdr_msgs/: AddCO2SourceRequest.h  DeleteCO2SourceRequest.h  DeleteRobotActionResult.h  DeleteRobotGoal.h  DeleteRobotResult.h  DeleteSoundSourceRequest.h  FootprintMsg.h  (+18 more)
line_following_robot/: CMakeLists.txt  package.xml
line_following_robot/include/: line_following.h
line_following_robot/src/: line_following.cpp  main.cpp
src/assignment_2/: CMakeLists.txt  package.xml
(+189 files in other folders)
